<resources>
    <string name="app_name">PayTech</string>
    <string name="hello_world">Hello World</string>
    <string name="add_employee">Add Employee</string>
    <string name="view_employees">View Employees</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email_id">Email Id</string>
    <string name="contact">Contact</string>
    <string name="save_data">Save</string>
</resources>